--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,9 +23,11 @@
     "expo": "~46.0.16",
     "expo-auth-session": "~3.7.4",
     "expo-font": "~10.2.0",
+    "expo-notifications": "~0.16.1",
     "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-web-browser": "~11.0.0",
+    "fix": "^0.0.6",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-native": "0.69.6",
@@ -34,10 +36,12 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "expo-clipboard": "~3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/react": "~18.0.0",
     "tailwindcss": "^3.2.4"
   },
   "overrides": {
